# docs/swagger.json
@@ -58,10 +58,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/model.Ingredient"
-                            }
+                            "$ref": "#/definitions/schema.IngredientsResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrMessage"
                         }
                     },
                     "500": {
@@ -95,8 +98,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/model.Ingredient"
                         }
@@ -105,6 +108,12 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/exception.ErrValidation"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrMessage"
                         }
                     },
                     "409": {
@@ -215,10 +224,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/model.Recipe"
-                            }
+                            "$ref": "#/definitions/schema.RecipesResponse"
                         }
                     },
                     "400": {
@@ -267,8 +273,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/model.Recipe"
                         }
@@ -276,11 +282,20 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/controller.ErrMessage"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/exception.ErrValidation"
+                            }
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrMessage"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
                         "schema": {
                             "$ref": "#/definitions/controller.ErrMessage"
                         }
@@ -313,10 +328,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/model.Recipe"
-                            }
+                            "$ref": "#/definitions/schema.RecipesResponse"
                         }
                     },
                     "400": {
@@ -414,15 +426,15 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/schema.Login"
+                            "$ref": "#/definitions/schema.User"
                         }
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/schema.User"
+                            "$ref": "#/definitions/model.User"
                         }
                     },
                     "400": {
@@ -465,7 +477,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.Message"
+                            "$ref": "#/definitions/model.User"
                         }
                     },
                     "400": {
@@ -480,6 +492,12 @@
                             "$ref": "#/definitions/controller.ErrMessage"
                         }
                     },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ErrMessage"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error"
                     }
@@ -487,7 +505,7 @@
             }
         },
         "/users/password-change": {
-            "post": {
+            "patch": {
                 "security": [
                     {
                         "JWT": []
@@ -574,6 +592,7 @@
             "properties": {
                 "id": {
                     "type": "integer",
+                    "x-order": "1",
                     "example": 1
                 },
                 "name": {
@@ -587,19 +606,34 @@
             "properties": {
                 "id": {
                     "type": "integer",
+                    "x-order": "1",
                     "example": 1
+                },
+                "name": {
+                    "type": "string",
+                    "x-order": "2"
+                },
+                "making": {
+                    "type": "string",
+                    "x-order": "3"
                 },
                 "ingredients": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/model.Ingredient"
                     }
+                }
+            }
+        },
+        "model.User": {
+            "type": "object",
+            "properties": {
+                "username": {
+                    "type": "string",
+                    "x-order": "1"
                 },
-                "making": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
+                "admin": {
+                    "type": "boolean"
                 }
             }
         },
@@ -608,6 +642,20 @@
             "properties": {
                 "name": {
                     "type": "string"
+                }
+            }
+        },
+        "schema.IngredientsResponse": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "ingredients": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Ingredient"
+                    }
                 }
             }
         },
@@ -644,12 +692,30 @@
                     "type": "string",
                     "x-order": "1"
                 },
+                "making": {
+                    "type": "string",
+                    "x-order": "2"
+                },
                 "ingredients": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/schema.Ingredient"
                     },
-                    "x-order": "2"
+                    "x-order": "3"
+                }
+            }
+        },
+        "schema.RecipesResponse": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "recipes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Recipe"
+                    }
                 }
             }
         },
